--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ openpyxl>=3.1.0
 plotly>=5.15.0
 numpy>=1.24.0
 
-# Force rebuild - v2.7.2 BUGFIX: TypeError fixes for Industry Benchmarks 
+# Force rebuild - v2.8.0 Clean UI without emojis 
