FORCE REBUILD v2.10.1 - Reorganized sidebar deployment
Forcing complete rebuild to ensure sidebar reorganization deploys properly:
- Project Basics first (hours, rate)
- Major Modeling Decisions second (scenario, cost avoidance)
- Then detailed configurations (initiatives, benchmarks, risk)
- Much more logical user workflow

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ openpyxl>=3.1.0
 plotly>=5.15.0
 numpy>=1.24.0
 
-# Force rebuild - v2.8.0 Clean UI without emojis 
+# Force rebuild - v2.10.0 Reorganized sidebar for better user flow 
