--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ openpyxl>=3.1.0
 plotly>=5.15.0
 numpy>=1.24.0
 
-# Force rebuild - v2.12.0 Initiative Selection moved to end 
+# Force rebuild - v2.12.3 Fixed all linter errors 
