--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ openpyxl>=3.1.0
 plotly>=5.15.0
 numpy>=1.24.0
 
-# Force rebuild - v2.12.9 MAJOR model.py cleanup + modern standards 
+# Force rebuild - v2.12.9b HOTFIX + complete environment refresh 
