--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit>=1.28.0
+streamlit>=1.32.0
 pandas>=2.0.0
-openpyxl>=3.1.0
 plotly>=5.15.0
-numpy>=1.24.0
+openpyxl>=3.1.0
 
-# Force rebuild - v2.12.11 Savings-target scenarios + cache clear 
+# Force rebuild - v3.0.0 CMMI Maturity Assessment Framework 
