--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ pandas>=2.0.0
 plotly>=5.15.0
 openpyxl>=3.1.0
 
-# Force rebuild - v3.0.0 CMMI Maturity Assessment Framework 
+# Force complete rebuild - v3.0.1 HOTFIX for import errors on Cloud deployment 
